@@ -983,6 +983,13 @@
 
 
 # =================================================================
+# Broker control
+# =================================================================
+
+# Enable the $CONTROL/broker/# topic API
+#enable_control_api false
+
+# =================================================================
 # External config files
 # =================================================================
 
